Bug 84417 - SIDEBAR: Impress Slide transitions list loses focus following preview then unable to navigate with keyboard
Summary: SIDEBAR: Impress Slide transitions list loses focus following preview then un...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.4.0 bisected
Keywords: regression
Depends on:
Blocks: Sidebar-Slide-Transition
  Show dependency treegraph
 
Reported: 2014-09-28 09:53 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-24 12:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-09-28 09:53:17 UTC
Steps:
1) Open Impress
2) Switch sidebar to slide transition tab
3) Click on a transition
4) Press up or down arrow keys

Behaviour: The listbox has lost focus, so up and down arrows simply end the transition preview.

Tested in 4.3.3 and master on Linux. Regression as its fine in 4.2.6.

Version: 4.4.0.0.alpha0+
Build ID: df73f4115cfe4d07e4159adf087571687eb173ec
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-09-25_23:36:54
Comment 1 V Stuart Foote 2014-09-30 15:02:29 UTC
Confirmed. This is a UX issue regards keyboard navigation. Focus shifts (or rather remains on the active slide following transition preview) away from the Slide Transition content panel in the Sidebar. GUI is correct as focus follows mouse clicks. 

No way to return focus to transition list .UI with keyboard actions.

Affecting GTKTreeView and GTKTreeSelection of slidetransitionspanel.ui

Present on current master for Windows, as well on 4.3.2 release. Coincisdes with the IAccessible2 integration, but the regression is NOT present on the 4.2 branch.

Bibisect results from Windows installers on hand...

http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=a9e7f34c83101c7a3f478ae6d8c487f0ea1c9bfd..68b2573a60d145e81cdef7748e4107c84bfa1b47

==BAD==Function is incorrect, no return of focus following transition preview==

Version: 4.3.0.0.alpha0+
Build ID: c3c6d7f886088b57869b6978309e7a39cba32bbb
TinderBox: Win-x86@39, Branch:master, Time: 2014-03-01_09:52:43

Version: 4.3.0.0.alpha0+
Build ID: c8a089d7dfa2527ff25aa144e65d0c96ea90028d
TinderBox: Win-x86@39, Branch:master, Time: 2014-02-06_10:29:45

Version: 4.3.0.0.alpha0+
Build ID: d058bf0f3f365549ab04139a7f44d97e102f987e
TinderBox: Win-x86@39, Branch:master, Time: 2014-01-12_00:07:23

Version: 4.3.0.0.alpha0+
Build ID: 007bf2b8c04090920b54e914ac75fc13720b450c
TinderBox: Win-x86@39, Branch:master, Time: 2013-12-14_10:16:52

Version: 4.3.0.0.alpha0+
Build ID: 56ad826194d0b9b42ed8bde35836b0e59c46baa6
TinderBox: Win-x86@39, Branch:master, Time: 2013-11-30_11:04:29

Version: 4.3.0.0.alpha0+
Build ID: 68b2573a60d145e81cdef7748e4107c84bfa1b47
TinderBox: Win-x86@39, Branch:master, Time: 2013-11-29_00:02:42


==OK==Function is correct==

Version: 4.3.0.0.alpha0+
Build ID: a9e7f34c83101c7a3f478ae6d8c487f0ea1c9bfd
TinderBox: Win-x86@39, Branch:master, Time: 2013-11-27_22:54:42

Version: 4.3.0.0.alpha0+
Build ID: b32651febdaad5939250fb04f721d88952f54732
TinderBox: Win-x86@39, Branch:master, Time: 2013-11-26_00:09:34

Version: 4.3.0.0.alpha0+
Build ID: e3b7e62b0dc34787f66c504230252b2c5edd18c3
TinderBox: Win-x86@39, Branch:master, Time: 2013-11-23_14:43:54
Comment 2 Caolán McNamara 2014-10-21 12:36:19 UTC
If you click on "no transition" and then press down, the right thing happens. So it appears to be playing the preview of the transition which grabs the focus back to the document
Comment 4 V Stuart Foote 2014-10-21 14:08:16 UTC
Caolán,
(In reply to Caolán McNamara from comment #2)
> If you click on "no transition" and then press down, the right thing
> happens. So it appears to be playing the preview of the transition which
> grabs the focus back to the document

Thanks, that seems to be the effect. Notice the patch to, will give it a whirl next TB build cycle.
Comment 5 V Stuart Foote 2014-10-22 14:09:01 UTC
Caolán, *,

Thanks, looks like the focus is now returned to the list of Slide Transitions following a preview. Unfortunately the keyboard navigation for entering the content panels in the Sidebar deck is also not correct.

You can mouse click on Slide Transition tab and then on a slide transition to enter the content panel.  And once in the content panel have the normal mix of <tab>/<shift><tab> and <cursor U,D> to navigate the GTK frame correctly.  

Where there is a problem is that with <F6> movement onto the Sidebar Tabs, and <cursor U,D> for selection of the Slide Transition tab to activate the content panel(s)--only the Title "Slide Transition" receives focus.

Can not then drop down from the title into the content panel(s) with keyboard only movements--it should be done with a <Tab>.  Interesting that if already in the content panel, from a mouse click, <Esc> correctly exits the panel back to the title, but can not reenter panel with <Tab>.

Steps to reproduce:

1. Open Impress w/Sidebar view active
2. mouse click on "Slide Transition" Tab
3. click on a slide transition in the list "Apply to selected slides" for preview
4. <Esc> to exit content panel back to Title
5. a <Tab> should reenter and focus on the transitions list, but it goes some where else?
6. <Esc> returns focus to Slide Transition Title

Steps 1-4 of these STR can be done keyboard only by cycling with <F6> to the Sidebar Tab, and cursor <U,D> to the Slide Transition Tab and <Enter>

Do you want a new bug for it, or reopen?
Comment 6 Caolán McNamara 2014-10-22 14:28:39 UTC
new bug please, I'm having a bit of trouble parsing the text of the report anyway. And FWIW there is no actual GTK in use here, so its not a Gtk frame or anything like that.
Comment 7 V Stuart Foote 2014-10-22 17:02:39 UTC
Keyboard a11y issue split out as bug 85337