Resolves: fdo#84417 restore focus window after preview

regression due to changes of sd/source/ui/slideshow/slideshow.cxx
in cc5518ca61b209408a9d5262bbdcc39efccdd72d

commit cc5518ca61b209408a9d5262bbdcc39efccdd72d
Author: Steve Yin <steve_y@apache.org>
Date:   Thu Nov 28 12:09:19 2013 +0000
    Integrate branch of IAccessible2

Change-Id: I6b399d68c1f3ef32b702135b981100a23760569b